2009-01-06  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:
	* gobject/valaccodebasemodule.vala:

	Support [CCode (ref_function_void = true)] attribute for bindings,
	based on patch by Andreas Brauchli, fixes bug 566078

2009-01-06  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraytype.vala:
	* gobject/valadbusmodule.vala:

	Support marshalling multi-dimensional arrays,
	based on patch by Didier Villevalois, fixes bug 565792

	* gobject/valadbusclientmodule.vala:

	Fix array out parameters in static D-Bus clients

2009-01-05  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala:

	Do not accidentally generate stacked arrays

	* vapi/packages/gdk-2.0/:

	Fix gdk_keymap_get_entries_for_keyval, gdk_threads_add_idle, and
	gdk_window_remove_filter bindings, patch by Mark Lee,
	fixes bug 566679

	* vapi/gdk-2.0.vapi: regenerated

2009-01-05  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix GtkWidget::style_set and gtk_rc_get_style_by_paths bindings

	* vapi/gtk+-2.0.vapi: regenerated

2009-01-04  Jürg Billeter  <j@bitron.ch>

	* vala/valathrowstatement.vala:

	Fix crash when using invalid throw expressions, fixes bug 565571

2009-01-04  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_init_with_args binding, fixes bug 547135

	* vapi/gtk+-2.0.vapi: regenerated

2009-01-04  Jürg Billeter  <j@bitron.ch>

	* vala/valamethodcall.vala:

	Fix potential crash when argument check of method call fails,
	fixes bug 566077

2009-01-04  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraycreationexpression.vala:
	* vala/valainitializerlist.vala:
	* gobject/valaccodearraymodule.vala:

	Support initializers for multi-dimensional arrays, fixes bug 541256

2009-01-04  Jürg Billeter  <j@bitron.ch>

	* vapi/curses.vapi:
	* vapi/enchant.vapi:
	* vapi/gnome-keyring-1.vapi:
	* vapi/gobject-2.0.vapi:
	* vapi/goocanvas.vapi:
	* vapi/gsl.vapi:
	* vapi/hildon-1.vapi:
	* vapi/libftdi.vapi:
	* vapi/libpanelapplet-2.0.vapi:
	* vapi/libusb.vapi: